; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_imap.c_imap_perform_authenticate.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_imap.c_imap_perform_authenticate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { i32 }

@CURLE_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"AUTHENTICATE %s %s\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"AUTHENTICATE %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*, i8*, i8*)* @imap_perform_authenticate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @imap_perform_authenticate(%struct.connectdata* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.connectdata*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.connectdata* %0, %struct.connectdata** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* @CURLE_OK, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load %struct.connectdata*, %struct.connectdata** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 (%struct.connectdata*, i8*, i8*, ...) @imap_sendf(%struct.connectdata* %12, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %13, i8* %14)
  store i32 %15, i32* %7, align 4
  br label %20

16:                                               ; preds = %3
  %17 = load %struct.connectdata*, %struct.connectdata** %4, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 (%struct.connectdata*, i8*, i8*, ...) @imap_sendf(%struct.connectdata* %17, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8* %18)
  store i32 %19, i32* %7, align 4
  br label %20

20:                                               ; preds = %16, %11
  %21 = load i32, i32* %7, align 4
  ret i32 %21
}

declare dso_local i32 @imap_sendf(%struct.connectdata*, i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
